--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\mathe\\AppData\\Roaming\\NetBeans\\22\\build.properties
+user.properties.file=C:\\Users\\mathe\\AppData\\Roaming\\NetBeans\\8.2rc\\build.properties
