--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,10 +35,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SistemaAlvesProva
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-j-8.3.0.jar=mysql-connector-j-8.3.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${libs.hibernate4-support.classpath}:\
+    ${libs.jpa2-persistence.classpath}:\
+    ${file.reference.mysql-connector-j-8.3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -47,8 +51,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=22
-javac.target=22
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
